--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "./lib/nslog.js",
   "name": "nslog",
+  "description": "Cross platform native logging",
   "version": "0.4.0",
   "licenses": [
     {
