--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "coffee-script": "~1.6.2"
   },
   "dependencies": {
-    "nan": "1.2.0",
-    "bindings": "~1.1.0"
+    "nan": "1.2.0"
   }
 }
