--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "coffee-script": "~1.6.2"
   },
   "dependencies": {
-    "nan": "https://atom.io/download/atom-shell/nan-1.6.1.tgz"
+    "nan": "^2.0.0"
   }
 }
