--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "coffee-script": "~1.6.2"
   },
   "dependencies": {
-    "nan": "^2.0.0"
+    "nan": "^2.0.0",
+    "node-gyp": "^3.4.0"
   }
 }
